[gd_scene load_steps=6 format=3 uid="uid://ciecplcgtbvp"]

[ext_resource type="Script" path="res://scripts/shop_interface.gd" id="1_le0l4"]
[ext_resource type="Texture2D" uid="uid://c5x0rwt7l5cit" path="res://assets/sprites/book.png" id="2_qttyb"]
[ext_resource type="FontFile" uid="uid://5ihhn67dre4l" path="res://assets/fonts/monogram-extended.ttf" id="3_soj60"]
[ext_resource type="Texture2D" uid="uid://c5srdy5s55523" path="res://assets/sprites/ui/search.png" id="4_4ua6e"]
[ext_resource type="PackedScene" uid="uid://cnglaivc74xau" path="res://scenes/shop_item.tscn" id="5_t2u5g"]

[node name="ShopInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_le0l4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
texture = ExtResource("2_qttyb")
expand_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_soj60")
theme_override_font_sizes/font_size = 32
text = "Booooks"

[node name="Search" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_soj60")
right_icon = ExtResource("4_4ua6e")

[node name="Close" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
clip_contents = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_soj60")
theme_override_font_sizes/font_size = 32
text = "x"
clip_text = true

[node name="Body" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Filters" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="GenreList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/Body/Filters"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_selected_color = Color(0.348379, 0.54939, 1, 1)
theme_override_fonts/font = ExtResource("3_soj60")

[node name="FilterClear" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Body/Filters"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_soj60")
text = "RESET"

[node name="MainContentContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body/MainContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body/MainContentContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="BooksList" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body/MainContentContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body/MainContentContainer/MarginContainer/ScrollContainer/BooksList" instance=ExtResource("5_t2u5g")]
layout_mode = 2

[node name="CartContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body/CartContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body/CartContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="Cart" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body/CartContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Body/CartContainer/VBoxContainer/MarginContainer/Cart"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_soj60")
text = "Subtotal
Â£0.00"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/Body/CartContainer/VBoxContainer/MarginContainer/Cart"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body/CartContainer/VBoxContainer/MarginContainer/Cart"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CartItems" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Body/CartContainer/VBoxContainer/MarginContainer/Cart/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Purchase" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Body/CartContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_soj60")
text = "PURCHASE
"
